Fix collapse open. Improve nested table styling

--- a/components/styles.module.scss
+++ b/components/styles.module.scss
@@ -65,5 +65,9 @@
   &_body {
     @include generatePxToRem('padding', 12);
     border-top: 1px solid var(--hr-color);
+
+    table {
+      @include generatePxToRem(margin, -12, !important);
+    }
   }
 }
